--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
+  lottie: ^2.7.0
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
 
@@ -60,6 +61,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/logo.png
+     - assets/animations/logo_animation.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
