--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -32,7 +32,9 @@ dependencies:
     sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
+  characters: ^1.3.0
   lottie: ^2.7.0
+  flutter_animate: ^4.5.0
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
 
