--- a/web_admin/package.json
+++ b/web_admin/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@tanstack/react-table": "^8.21.3",
     "clsx": "^2.1.1",
     "gsap": "^3.13.0",
     "lucide-react": "^0.539.0",
