--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -30,7 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  shared_preferences: ^2.2.3  
   # The following adds the Cupertino Icons font to your application.
   characters: ^1.3.0
   lottie: ^2.7.0
@@ -41,7 +41,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  shared_preferences: ^2.2.3  
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
