--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -62,7 +62,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assets/logo.png
+     - assets/brainbattle_logo_light_pink.png
      - assets/animations/logo_animation_light.json
   #   - images/a_dot_ham.jpeg
 
