--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   flutter_animate: ^4.5.0
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  video_player: ^2.9.1
+  visibility_detector: ^0.4.0+2
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
