--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -40,7 +40,9 @@ dependencies:
   video_player: ^2.9.1
   visibility_detector: ^0.4.0+2
   cached_network_image: ^3.3.1
-
+  camera: ^0.11.0+2
+  path_provider: ^2.1.4
+  path: ^1.9.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
